Agrego Icono y link al repo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
     />
   </head>
   <body>
-    <header class="container-fluid p-2 bg-primary text-white">
+    <header class="container-fluid p-2 bg-primary text-white  d-flex flex-row justify-content-around">
+      <a href="https://github.com/tferreyraw/CV_Generator"
+        ><img
+          class="img-fluid"
+          style="width: 50px; height: 50px"
+          src="./github.svg"
+          alt=""
+      /></a>
       <h1 class="text-center">Crea el CV de una persona aleatoria</h1>
     </header>
     <main
